--- a/lib/package.json
+++ b/lib/package.json
@@ -29,27 +29,28 @@
     "build:rollup": "rollup --config"
   },
   "dependencies": {
-    "highlight.js": "^9.18.1",
-    "lit-element": "^2.2.1"
+    "highlight.js": "^9.18.3",
+    "lit-element": "^2.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
+    "@babel/core": "^7.11.1",
     "@rollup/plugin-commonjs": "^11.1.0",
-    "autoprefixer": "^9.7.4",
+    "autoprefixer": "^9.8.6",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "cssnano": "^4.1.10",
+    "generate-source-map": "0.0.5",
     "glob": "^7.1.6",
-    "np": "^6.2.3",
+    "np": "^6.3.2",
     "npm-run-all": "^4.1.5",
-    "postcss": "^7.0.26",
+    "postcss": "^7.0.32",
     "postcss-each": "^0.10.0",
     "postcss-import": "^12.0.1",
-    "rollup": "^1.29.1",
-    "rollup-plugin-babel": "^4.3.3",
+    "rollup": "^1.32.1",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-require-context": "^1.0.0",
+    "rollup-plugin-require-context": "^1.0.1",
     "rollup-pluginutils": "^2.8.2",
     "uglifycss": "0.0.29"
   }
