--- a/docs/config.yml
+++ b/docs/config.yml
@@ -5,3 +5,6 @@ collections:
   - name: "components" # Used in routes, e.g., /admin/collections/blog
     label: "components" # Used in the UI
     folder: "../lib/src/components/**/*.md" # The path to the folder where the documents are stored
+  - name: "patterns"
+    label: "patterns"
+    folder: "./src/patterns/**.md"
